# pixie-prompts-examples

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: daily-release.yml  sync-base-version.yml
.pixie/prompts/complex_prompt/: metadata.json  v1.jinja  v2.jinja
.pixie/prompts/nested_typed_prompt/: metadata.json  v1.jinja
.pixie/prompts/simple_prompt/: metadata.json  v1.jinja  v2.jinja
.pixie/prompts/typed_prompt/: metadata.json  v1.jinja
examples/: prompts.py
